package net.syncthing.java.httprelay;

option optimize_for = LITE_RUNTIME;

message HttpRelayPeerMessage{
    optional HttpRelayPeerMessageType message_type = 1;
    optional string session_id = 2;
    optional string device_id = 3;
    optional int64 sequence = 4;
    optional bytes data = 5;
}

message HttpRelayServerMessage{
    optional HttpRelayServerMessageType message_type = 1;
    optional string session_id = 2;
    optional bool is_server_socket = 3;
    optional int64 sequence = 4;
    optional bytes data = 5;
}

enum HttpRelayPeerMessageType {
    CONNECT             = 0;
    PEER_TO_RELAY       = 1;
    WAIT_FOR_DATA       = 2;
    PEER_CLOSING        = 3;
}

enum HttpRelayServerMessageType {
    PEER_CONNECTED      = 0;
    DATA_ACCEPTED       = 1;
    RELAY_TO_PEER       = 2;
    SERVER_CLOSING      = 3;
    ERROR               = 4;
}
